<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:webkey="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.registration.fragments.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.openmdmremote.ui.typefaces.MyTextInputLayout
                    android:id="@+id/inputlayout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/txt"
                    android:layout_marginTop="@dimen/activity_txtviews_space">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:hint="@string/signup_hint_email" />
                </com.openmdmremote.ui.typefaces.MyTextInputLayout>

                <com.openmdmremote.ui.typefaces.MyTextInputLayout
                    android:id="@+id/inputlayout_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/txt"
                    android:paddingTop="@dimen/activity_txtviews_space">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:hint="@string/signup_hint_password" />
                </com.openmdmremote.ui.typefaces.MyTextInputLayout>


                <com.openmdmremote.ui.typefaces.MyTextInputLayout
                    android:id="@+id/inputlayout_pwdagain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/txt"
                    android:layout_marginTop="@dimen/activity_txtviews_space">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:hint="@string/signup_hint_passwordagain" />
                </com.openmdmremote.ui.typefaces.MyTextInputLayout>
            </LinearLayout>
            <com.openmdmremote.ui.typefaces.MyTextView
                android:id="@+id/link_termsofservice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:onClick="onClick"
                android:textSize="10sp"
                android:textColor="@color/txt"
                webkey:bold="false"
                android:text="@string/txt_accept_license" />
        </LinearLayout>
    </ScrollView>

    <com.openmdmremote.ui.typefaces.MyButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/tour_btn_registration"
        android:gravity="center_horizontal|bottom" />
</LinearLayout>
