<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:webkey="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:clickable="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <com.openmdmremote.ui.typefaces.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            webkey:bold="false"
            android:text="@string/resetpwd_description"
            android:textSize="25sp" />

        <com.openmdmremote.ui.typefaces.MyTextInputLayout
            android:id="@+id/inputlayout_resetaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/txt"
            android:layout_marginTop="50dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:hint="@string/resetpwd_hint_address" />
        </com.openmdmremote.ui.typefaces.MyTextInputLayout>

        <com.openmdmremote.ui.typefaces.MyTextView
            android:id="@+id/response_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            webkey:bold="true"
            android:text=""
            android:textSize="13sp" />
    </LinearLayout>


    <com.openmdmremote.ui.typefaces.MyButton
        android:id="@+id/btn_rest_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/resetpwd_btn_send"
        android:gravity="center_horizontal|bottom" />
</LinearLayout>