<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.registration.fragments.LogInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_white" />

            <com.openmdmremote.ui.typefaces.MyTextInputLayout
                android:id="@+id/inputlayout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/txt"
                android:layout_marginTop="@dimen/activity_txtviews_space">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:hint="@string/signup_hint_email" />
            </com.openmdmremote.ui.typefaces.MyTextInputLayout>

            <com.openmdmremote.ui.typefaces.MyTextInputLayout
                android:id="@+id/inputlayout_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/txt"
                android:layout_marginTop="@dimen/activity_txtviews_space">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:hint="@string/signup_hint_password" />
            </com.openmdmremote.ui.typefaces.MyTextInputLayout>

            <com.openmdmremote.ui.typefaces.MyTextView
                android:id="@+id/error_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:visibility="gone"
                android:layout_gravity="center" />

            <com.openmdmremote.ui.typefaces.MyButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_txtviews_space"
                android:text="@string/tour_btn_login"
                android:gravity="center_horizontal|bottom" />

            <com.openmdmremote.ui.typefaces.MyTextView
                android:id="@+id/btn_resetpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/login_txt_forgot_pwd"
                android:clickable="true"
                android:layout_gravity="center" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
