<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:webkey="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.registration.fragments.PinFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.openmdmremote.ui.typefaces.MyTextInputLayout
                    android:id="@+id/inputlayout_pairingping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/txt"
                    android:layout_marginTop="@dimen/activity_txtviews_space">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:digits="abcdefghijklmnopqrstuvwxyz0123456789"
                        android:hint="@string/devpair_hint_pin" />
                </com.openmdmremote.ui.typefaces.MyTextInputLayout>
                <com.openmdmremote.ui.typefaces.MyTextView
                    android:id="@+id/error_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone"
                    android:layout_gravity="center" />
            </LinearLayout>
            <com.openmdmremote.ui.typefaces.MyTextView
                android:id="@+id/link_termsofservice_pairing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:onClick="onClick"
                android:textSize="10sp"
                android:textColor="@color/txt"
                webkey:bold="false"
                android:text="@string/txt_accept_license" />
        </LinearLayout>
    </ScrollView>

    <com.openmdmremote.ui.typefaces.MyButton
        android:id="@+id/btn_pairing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/devpair_btn_pairing"
        android:gravity="center_horizontal|bottom" />
</LinearLayout>